test/fail/UselessPrivatePragma.agda
module UselessPrivatePragma where

postulate Char : Set

private
  {-# BUILTIN CHAR Char #-}
